--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav class="navbar">
       <div class="container">
-        <a href="#" class="logo">Your Name</a>
+        <a href="#" class="logo">Natasha E</a>
         <ul class="nav-links">
           <li><a href="#" class="nav-link" onclick="navigateTo('home')">Home</a></li>
           <li><a href="#" class="nav-link" onclick="navigateTo('coding')">Coding</a></li>
@@ -32,11 +32,10 @@
   <main id="main-content">
     <section id="home" class="home-section">
       <div class="container">
-        <h1>Hi! I am Natasha</h1>
-        <p>Explore my portfolio through this interactive game-style homepage.</p>
-        <div class="interactive-area">
-          <div class="character">
-            <img src="images/giphy.gif" alt="Animated Dog" class="dog">
+        <h2>Hi! </h2>
+         <h1> I am Natasha</h1>
+
+        
           </div>
           <div class="buttons">
             <button class="btn" onclick="navigateTo('coding')">Coding</button>
